# air-quality-cli

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: build-release.yml
src/: main.rs  utils.rs
src/dashboard_terminal/: app.rs  app_error.rs  domain.rs  mod.rs  widgets.rs
src/device/: mod.rs
src/file_sync/: error.rs  file_service.rs  mod.rs  synchronize.rs
src/file_sync/types/: error.rs  metadata.rs
src/runner/: bluetooth.rs  error.rs  file_io.rs  mod.rs  parser.rs  runner.rs  runner_loop.rs  sensor_io.rs
src/runner/python_dependency/: mod.rs  read_waveplus.py
src/shared/types/: mod.rs  sensor_data.rs  sensor_quality.rs  sensor_quality_test.rs
